objects/advpm__Matter__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Total_Expenses2__c</fullName>
        <label>Total Expenses</label>
        <summarizedField>advpm__Expense__c.advpm__Total_Amount__c</summarizedField>
        <summaryForeignKey>advpm__Expense__c.advpm__Matter__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>advpm__Total_Expenses__c</fullName>
        <label>Total Expenses (DEPRECATED)</label>
        <summarizedField>advpm__Expense__c.advpm__Expense_Amount__c</summarizedField>
        <summaryForeignKey>advpm__Expense__c.advpm__Matter__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>advpm__Total_Time2__c</fullName>
        <formula>advpm__Total_Time__c</formula>
        <label>Total Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Total_Time_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>System monitored field, and refreshes value automatically when Time records are added or updated.</inlineHelpText>
        <label>Total Time Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Total_Time__c</fullName>
        <inlineHelpText>System monitored field, and refreshes value automatically when Time records are added or updated.</inlineHelpText>
        <label>Total Time (DEPRECATED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Trial_Date__c</fullName>
        <label>Trial Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>advpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bilateral</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Corporate Transaction</fullName>
                </value>
                <value>
                    <fullName>Criminal</fullName>
                </value>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Government Affairs</fullName>
                </value>
                <value>
                    <fullName>IP</fullName>
                </value>
                <value>
                    <fullName>Litigation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Personal Injury</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Syndicated</fullName>
                </value>
                <value>
                    <fullName>Taxation</fullName>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Win_Loss_Reason__c</fullName>
        <label>Win/Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reason 1</fullName>
                </value>
                <value>
                    <fullName>Reason 2</fullName>
                </value>
                <value>
                    <fullName>Reason 3</fullName>
                </value>
                <value>
                    <fullName>Reason 4</fullName>
                </value>
                <value>
                    <fullName>Reason 5</fullName>
                </value>
                <value>
                    <fullName>Reason 6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__Worst_Case_Settlement_Amount__c</fullName>
        <label>Worst Case Settlement Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>hNext_Review_Date_Overdue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Review Date Overdue</label>
        <type>Checkbox</type>
    </fields>
    <label>Matter</label>
    <listViews>
        <fullName>advpm__Active_Matters</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter_Number__c</columns>
        <columns>advpm__Status__c</columns>
        <columns>advpm__Type__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>advpm__Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Active Matters</label>
    </listViews>
    <listViews>
        <fullName>advpm__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Deal_Description__c</columns>
        <columns>ExternalMatterId__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>advpm__Closed_Matters</fullName>
        <columns>NAME</columns>
        <columns>advpm__Matter_Number__c</columns>
        <columns>advpm__Type__c</columns>
        <columns>advpm__Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>advpm__Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>Closed Matters</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matters</pluralLabel>
    <recordTypes>
        <fullName>Deal</fullName>
        <active>true</active>
        <label>Deal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal</fullName>
        <active>true</active>
        <description>Legacy record type reserved for imported Matter Management Lite (MML) matters. All teams using MML layout</description>
        <label>Legal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Litigation_Matter</fullName>
        <active>true</active>
        <description>Create a new Litigation Matter</description>
        <label>Litigation Matter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Market_Transaction</fullName>
        <active>true</active>
        <description>Market Agreement fro CNSG Team</description>
        <label>Market Transaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>Market_Transaction_Locked</fullName>
        <active>true</active>
        <label>Market Transaction (Locked)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Market_Transaction_Prime_Services</fullName>
        <active>true</active>
        <description>Market Agreement - Prime Services for CNSG Team</description>
        <label>Market Transaction - Prime Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only_Legal_Hold_Legal_RT</fullName>
        <active>true</active>
        <label>Read-Only Legal Hold (Legal RT)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Read_Only_Legal_Hold_Litigation_RT</fullName>
        <active>true</active>
        <label>Read-Only Legal Hold (Litigation RT)</label>
    </recordTypes>
    <recordTypes>
        <fullName>advpm__Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Custom_Sharing__c</fullName>
        <label>Custom Sharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>Availability_Period_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR
(
AND( ISBLANK(TEXT(Availability__c)), NOT(ISBLANK(Availability_Period__c))),
AND( NOT(ISBLANK(TEXT(Availability__c))), ISBLANK(Availability_Period__c ) )
)</errorConditionFormula>
        <errorMessage>Please ensure that the Availability Period is specified when the Availability is selected.
and the Availability is specified when the Availability Period is populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_Count_Asset_Manager_Relationship_T</fullName>
        <active>true</active>
        <errorConditionFormula>Count_Asset_Manager__c &gt; 1</errorConditionFormula>
        <errorMessage>You cannot add additional Asset Managers to this Deal as this type of relationship has already been added</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_Count_Counterparty_Relationship_T</fullName>
        <active>true</active>
        <errorConditionFormula>Count_Counterparty__c &gt; 1</errorConditionFormula>
        <errorMessage>You cannot add additional Counterparties to this Deal as this type of relationship has already been added</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LIBRA_Count_Jurisdiction</fullName>
        <active>true</active>
        <description>Limits the number of jurisdiction records linked to a Matter to 1</description>
        <errorConditionFormula>Count_Jurisdiction__c &gt; 1</errorConditionFormula>
        <errorMessage>You cannot add more than 1 Jurisdiction record to a Deal.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_100_percent_to_claim</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(Total_Claim_Percentage__c = 1 || Total_Claim_Percentage__c = 0)</errorConditionFormula>
        <errorMessage>Claim apportions must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_claim_not_greater_100</fullName>
        <active>false</active>
        <description>Validates whether the the total portions of claim is not greater that 100%</description>
        <errorConditionFormula>Total_Claim_Percentage__c&gt;1</errorConditionFormula>
        <errorDisplayField>Product2__c</errorDisplayField>
        <errorMessage>The total percentage of claim cannot be greater than 100%</errorMessage>
    </validationRules>
</CustomObject>